# axor-core

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml
axor_core/: __init__.py
axor_core/budget/: __init__.py  estimator.py  policy_engine.py  tracker.py
axor_core/capability/: __init__.py  executor.py  resolver.py
axor_core/context/: __init__.py  cache.py  compressor.py  invalidator.py  lineage.py  manager.py  selector.py  symbol_table.py
axor_core/contracts/: __init__.py  agent.py  cancel.py  command.py  context.py  envelope.py  extension.py  intent.py  invokable.py  memory.py  policy.py  result.py  trace.py
axor_core/errors/: __init__.py  exceptions.py
axor_core/extensions/: __init__.py  registry.py  sanitizer.py
axor_core/node/: __init__.py  envelope.py  export.py  intent_loop.py  spawn.py  wrapper.py
axor_core/policy/: __init__.py  analyzer.py  composer.py  heuristic.py  heuristic_coefficients.json  keyword_relevance.py  presets.py  selector.py  topics.py
axor_core/trace/: __init__.py  collector.py  events.py
axor_core/worker/: __init__.py  commands.py  dispatcher.py  session.py
tests/: conftest.py
tests/budget/: test_budget.py
tests/capability/: test_capability.py
tests/context/: test_context.py
tests/contracts/: test_cancel.py
tests/integration/: test_session.py
tests/node/: test_node.py
tests/policy/: test_keyword_relevance.py  test_policy.py
tests/trace/: test_collector_persistence.py
