[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "axor-core"
version = "0.4.0"
description = "Provider-agnostic governance kernel for agent systems"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
keywords = ["agents", "governance", "llm", "ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]

# Core has zero required dependencies — by design.
# Provider SDKs live in adapter packages (axor-claude, axor-openai).
# Optional extras are for development only.
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
]

[project.urls]
"Bug Tracker" = "https://github.com/Bucha11/axor-core/issues"
Changelog = "https://github.com/Bucha11/axor-core/releases"
Repository = "https://github.com/Bucha11/axor-core"

[tool.hatch.build.targets.wheel]
packages = ["axor_core"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
source = ["axor_core"]
omit = ["tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]
